--- a/avis-notices-eng.html
+++ b/avis-notices-eng.html
@@ -13,11 +13,11 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <title>Notices - EGD - PWGSC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart -->
-<meta name="description" content="English description / Description en anglais" />
+<meta name="description" content="We are a dynamic full service drydock serving national and international clients 24-hours-a-day, seven days a week, 365 days a year. The Dock provides a full range of ship repair services and amenities like our new stabilizer pockets." />
 <meta name="dcterms.description" content="We are a dynamic full service drydock serving national and international clients 24-hours-a-day, seven days a week, 365 days a year. The Dock provides a full range of ship repair services and amenities like our new stabilizer pockets." />
 <meta name="dcterms.creator" content="Government of Canada, Public Works and Government Services Canada" />
 <meta name="dcterms.title" content="Notices - EGD - PWGSC" />
-<meta name="dcterms.issued" title="W3CDTF" content="Date published (YYYY-MM-DD) / Date de publication (AAAA-MM-JJ)" />
+<meta name="dcterms.issued" title="W3CDTF" content="2012-12-21" />
 <meta name="dcterms.modified" title="W3CDTF" content="<!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'-->" />
 <meta name="dcterms.subject" title="gccore" content="Ships; Wharfs; Maintenance; Inspection" />
 <meta name="dcterms.language" title="ISO639-2" content="eng" />
@@ -57,37 +57,32 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-				<h1 id="cont">
-					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					Notices
-					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
-					</h1>
+<h1>Notices</h1>
 
-          <h2>New Electrical Lockout, Policy, Procedures &amp; Records</h2>
+<h2>New Electrical Lockout, Policy, Procedures &amp; Records</h2>
 
-          <p>
-          The Esquimalt Graving Dock (EGD) has a new electrical Lockout Policy, Procedures & Records document dated July 18, 2012. As a tenant and/or contractor working at the <abbr title="Esquimalt Graving Dock">EGD</abbr>, it is important that you obtain a copy of this. Please contact the Electrical Services Department by telephone at: 250-363-3991 or by email to:  <a href="Joe.Lezetc@pwgsc-tpsgc.gc.ca">Joe.Lezetc@pwgsc-tpsgc.gc.ca</a>
-          </p>
+<p>
+The Esquimalt Graving Dock (EGD) has a new electrical Lockout Policy, Procedures & Records document dated July 18, 2012. As a tenant and/or contractor working at the <abbr title="Esquimalt Graving Dock">EGD</abbr>, it is important that you obtain a copy of this. Please contact the Electrical Services Department by telephone at: 250-363-3991 or by email to:  <a href="Joe.Lezetc@pwgsc-tpsgc.gc.ca">Joe.Lezetc@pwgsc-tpsgc.gc.ca</a>
+</p>
 
-          <h2>Operational Notifications For 2012-2014</h2>
+<h2>Operational Notifications For 2012-2014</h2>
 
-          <p>
-          Please take note that there will be limitations to space on the North Landing Wharf (NLW) and the South Jetty (SJ) from October 1, 2012 to September 30, 2014. On the <abbr title="North Landing Wharf">NLW</abbr> and <abbr title="South Jetty">SJ</abbr> you can note the dates where it states <em><abbr title="North Landing Wharf">NLW</abbr> or <abbr title="South Jetty">SJ</abbr> Open Water Dredging Project</em>. On the South Jetty note the dates where it states <em><abbr title="South Jetty">SJ</abbr> Sheetpile Wall Construction</em>. We ask that if you would like space during these periods please submit a tentative booking. When space is deemed available without disrupting the projects we will contact the users to offer confirmation for the space on a first come first serve basis.
-          </p>
+<p>
+Please take note that there will be limitations to space on the North Landing Wharf (NLW) and the South Jetty (SJ) from October 1, 2012 to September 30, 2014. On the <abbr title="North Landing Wharf">NLW</abbr> and <abbr title="South Jetty">SJ</abbr> you can note the dates where it states <em><abbr title="North Landing Wharf">NLW</abbr> or <abbr title="South Jetty">SJ</abbr> Open Water Dredging Project</em>. On the South Jetty note the dates where it states <em><abbr title="South Jetty">SJ</abbr> Sheetpile Wall Construction</em>. We ask that if you would like space during these periods please submit a tentative booking. When space is deemed available without disrupting the projects we will contact the users to offer confirmation for the space on a first come first serve basis.
+</p>
 
-          <h2>Attention All Users</h2>
+<h2>Attention All Users</h2>
 
-          <p>
-          Please be advised that when dry or wet docking requests are submitted, every attempt will be made to accommodate a specific location request.  However, if we confirm a wet or dry docking, we are only confirming that the request will be accommodated within the dry-dock or water lot.  We reserve the right to place the vessels at a location that does not interfere or impede other activity and maximizes the use of facility.  On rare occasions, a vessel may have to be repositioned during its stay and the cost of the movement will not be borne by <abbr title="Esquimalt Graving Dock">EGD</abbr>.
-          </p>
+<p>
+Please be advised that when dry or wet docking requests are submitted, every attempt will be made to accommodate a specific location request.  However, if we confirm a wet or dry docking, we are only confirming that the request will be accommodated within the dry-dock or water lot.  We reserve the right to place the vessels at a location that does not interfere or impede other activity and maximizes the use of facility.  On rare occasions, a vessel may have to be repositioned during its stay and the cost of the movement will not be borne by <abbr title="Esquimalt Graving Dock">EGD</abbr>.
+</p>
 
-          <h2>Important Notice to Agents and Ship Repair Firms Pertaining to Services Available at the Esquimalt Graving Dock</h2>
+<h2>Important Notice to Agents and Ship Repair Firms Pertaining to Services Available at the Esquimalt Graving Dock</h2>
 
-          <p>
-            Commencing January 1, 2010 all users of the Esquimalt Graving Dock will be required to utilize all the services provided by the Esquimalt Graving Dock including the crane service provided by the Esquimalt Graving Dock's multiple cranes.  This includes all dry dockings and/or wet dockings where cargo and/or vessels are both being loaded and/or unloaded.  The only time that onboard cranes or other cranes will be permitted to be used are when none of the Esquimalt Graving Dock's cranes are  available for use due to operational commitments, and the use of any "other" cranes must be discussed prior to the utilization of any "other" cranes.  If any Agents and/or ship repair firms fail to utilize the Esquimalt Graving Dock's crane(s), without prior consent from the management of the Esquimalt Graving Dock, then charges will be applied at the "standby rate" which is the full main hook charge out rate per hour, during the period that the "other" cranes are being utilized.
-          </p>
-      </div></div>
-
+<p>
+  Commencing January 1, 2010 all users of the Esquimalt Graving Dock will be required to utilize all the services provided by the Esquimalt Graving Dock including the crane service provided by the Esquimalt Graving Dock's multiple cranes.  This includes all dry dockings and/or wet dockings where cargo and/or vessels are both being loaded and/or unloaded.  The only time that onboard cranes or other cranes will be permitted to be used are when none of the Esquimalt Graving Dock's cranes are  available for use due to operational commitments, and the use of any "other" cranes must be discussed prior to the utilization of any "other" cranes.  If any Agents and/or ship repair firms fail to utilize the Esquimalt Graving Dock's crane(s), without prior consent from the management of the Esquimalt Graving Dock, then charges will be applied at the "standby rate" which is the full main hook charge out rate per hour, during the period that the "other" cranes are being utilized.
+</p>
+</div></div>
 <div id="wb-sec"><div id="wb-sec-in">
 <!--#include virtual="/pac/cse-egd/includes/nav_gauche-nav_left-eng.html" -->
 </div></div>
