--- a/services-eng.html
+++ b/services-eng.html
@@ -10,14 +10,9 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-eng.html -->
 <!-- TitleStart -->
-<title>Services &ndash; EGD &ndash; PWGSC</title>
-
-<!-- TITLE ENDS | FIN DU TITRE -->
-<!-- METADATA BEGINS | DEBUT DES METADONNEES -->
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<link rel="schema.dc" href="http://purl.org/dc/elements/1.1/" />
-<link rel="schema.dc" href="http://purl.org/dc/terms/" />
-
+<title>Services - EGD - PWGSC</title>
+<!-- TitleEnd -->
+<!-- MetadataStart -->
 <meta name="description" content="We are a dynamic full service drydock serving national and international clients 24-hours-a-day, seven days a week, 365 days a year. The Dock provides a full range of ship repair services and amenities like our new stabilizer pockets." />
 <meta name="dcterms.description" content="We are a dynamic full service drydock serving national and international clients 24-hours-a-day, seven days a week, 365 days a year. The Dock provides a full range of ship repair services and amenities like our new stabilizer pockets." />
 <meta name="dcterms.creator" content="Government of Canada, Public Works and Government Services Canada" />
@@ -53,36 +48,16 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <ol>
 <!--#include virtual="/site/wet3.0/html5/includes/pain-bread-eng.html" -->
 <!--#include virtual="/pac/cse-egd/includes/pain-bread-section-eng.html" -->
-&gt;&nbsp;Services
+<li>Services</li>
 </ol>
 </div></div>
 </nav>
 <!-- HeaderEnd -->
 </header></div></div>
 
-
-			<!--#include virtual="/clf20/ssi/bread-pain-eng.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-eng.html"-->
-			&gt;&nbsp;Services</p>
-		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
-		<div class="colLayout">
-			<!-- TWO COLUMN LAYOUT BEGINS | DEBUT DE LA MISE EN PAGE DE DEUX COLONNES -->
-			<!-- LEFT SIDE MENU BEGINS | DEBUT DU MENU LATERAL GAUCHE -->
-			<div class="left">
-				<!--#include virtual="/clf20/ssi/left-menu-gauche1-eng.html"-->
-				<!--#include virtual="/pac/cse-egd/ssi/menu-mi-eng.html"-->
-				<!--#include virtual="/clf20/ssi/left-menu-gauche-proactive-eng.html"-->
-			</div>
-			<!-- LEFT SIDE MENU ENDS | FIN DU MENU LATERAL GAUCHE -->
-			<!-- CONTENT BEGINS | DEBUT DU CONTENU -->
-
-			<div class="center">
-				<h1 id="cont">
-					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					Services
-					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
-					</h1>
-
-          <p>
+<div id="wb-core"><div id="wb-core-in" class="equalize">
+<div id="wb-main" role="main"><div id="wb-main-in">
+<h1>Services</h1>
           We are a dynamic full service drydock supporting national and international clientele 24&nbsp;hours a day, seven days a week and 365&nbsp;days a year. 
           </p>
 
@@ -146,26 +121,22 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
           The Risk Management Group addresses issues concerning safety, fire, security and public relations. They also ensure that <abbr title="Esquimalt Graving Dock">EGD</abbr> maintains its Marine Facility Certification under the requirements of the Marine Transportation Security Regulations and International Ship &amp; Port Facility Security Code. This group works and coordinates mostly behind the scenes to help ensure that not only do <abbr title="Esquimalt Graving Dock">EGD</abbr> employees work in a safe and secure environment, but also employees of the companies that operate out of the <abbr title="Esquimalt Graving Dock">EGD</abbr> facility.  
           </p>
 
-			</div>
+</div></div>
+<div id="wb-sec"><div id="wb-sec-in">
+<!--#include virtual="/pac/cse-egd/includes/nav_gauche-nav_left-eng.html" -->
+</div></div>
+</div></div>
 
-			<!-- CONTENT ENDS | FIN DU CONTENU -->
-			<!-- TWO COLUMN LAYOUT ENDS | FIN DE LA MISE EN PAGE DE DEUX COLONNES -->
-			<!-- FOOTER BEGINS | DEBUT DU PIED DE LA PAGE -->
-			<div class="footer">
-				<div class="footerline"></div>
-				<div class="foot1">
-					<!-- DATE MODIFIED BEGINS | DEBUT DE LA DATE DE MODIFICATION -->
-					Date Modified: <span class="date">
-					<!--#config timefmt="%Y-%m-%d"-->
-					<!--#echo var="LAST_MODIFIED"-->
-					</span>
-					<!-- DATE MODIFIED ENDS | FIN DE LA DATE DE MODIFICATION -->
-				</div>
-				<!--#include virtual="/clf20/ssi/foot-pied-eng.html"-->
-			</div>
-			<!-- FOOTER ENDS | FIN DU PIED DE LA PAGE -->
-		</div>
-	</div>
-</div>
+<div id="wb-foot"><div id="wb-foot-in"><footer><h2>Footer</h2>
+<!-- FooterStart -->
+<!--#include virtual="/site/wet3.0/html5/includes/pied_site-site_footer-eng.html" -->
+<!--#include virtual="/boew-wet/wet3.0/html5/includes/pied_gc-gc_footer-eng.html" -->
+<!-- FooterEnd -->
+</footer>
+</div></div></div>
+
+<!-- ScriptsStart -->
+<!--#include virtual="/boew-wet/wet3.0/html5/includes/script_pied-script_footer.html" -->
+<!-- ScriptsEnd -->
 </body>
 </html>
