Change tphp links

--- a/conduite-conduct-eng.html
+++ b/conduite-conduct-eng.html
@@ -58,24 +58,6 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
 <h1>Code of Conduct</h1>
-		<div class="colLayout">
-			<!-- TWO COLUMN LAYOUT BEGINS | DEBUT DE LA MISE EN PAGE DE DEUX COLONNES -->
-			<!-- LEFT SIDE MENU BEGINS | DEBUT DU MENU LATERAL GAUCHE -->
-			<div class="left">
-				<!--#include virtual="/clf20/ssi/left-menu-gauche1-eng.html"-->
-				<!--#include virtual="/pac/cse-egd/ssi/menu-mi-eng.html"-->
-				<!--#include virtual="/clf20/ssi/left-menu-gauche-proactive-eng.html"-->
-			</div>
-			<!-- LEFT SIDE MENU ENDS | FIN DU MENU LATERAL GAUCHE -->
-			<!-- CONTENT BEGINS | DEBUT DU CONTENU -->
-
-			<div class="center">
-
-				<h1 id="cont">
-					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					Code of Conduct
-					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
-					</h1>
 				<h2><strong>ARTICLE&nbsp;1</strong></h2>
 				<h3><strong>OBJECT AND GUIDING PRINCIPLES</strong></h3>
 				<p><strong>1.1&nbsp;Object of Code</strong>. <em> Conducting business at the Esquimalt Graving Dock (EGD) is a privilege, not a right.</em> The object of this Code is to establish and articulate the corporate values, responsibilities, obligations and ethical policies that all businesses, as applicable, are to prescribe to <em>while operating at the Esquimalt Graving Dock</em>. </p>
@@ -137,7 +119,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 					on the <em>www.tpsgc-pwgsc.gc.ca/pac/cse-egd</em> web site.</p>
 				<p><strong>1.8&nbsp;Code Review</strong>. This Code will be reviewed and amended
 					as required.</p>
-				<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
+				<div class="topPage"> <a href="#wb-tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 					Top of Page</a> </div>
 				<h2><strong>ARTICLE&nbsp;2</strong></h2>
 				<h3> <strong>ETHICAL VALUES</strong></h3>
@@ -154,7 +136,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
             and courtesy in dealings with Esquimalt Graving Dock staff, clients, suppliers,
             colleagues and citizens of Canada.</li>
         </ol>
-				<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
+				<div class="topPage"> <a href="#wb-tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 					Top of Page</a> </div>
 				<h2><strong>ARTICLE&nbsp;3</strong></h2>
 				<h3><strong>BUSINESS REQUIREMENTS</strong></h3>
@@ -180,7 +162,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
           <li>(e) Are mutually beneficial and lead to success through fair dealing and
             high standards of business integrity.</li>
         </ol>
-				<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
+				<div class="topPage"> <a href="#wb-tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 					Top of Page</a> </div>
 				<h2><strong>ARTICLE&nbsp;4</strong></h2>
 				<h3><strong>STANDARDS OF BEHAVIOUR</strong></h3>
@@ -226,7 +208,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
           <li>(o) Ensure that all subcontractors working at the Esquimalt Graving Dock
             receive a copy of this Code of Conduct.</li>
         </ol>
-				<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
+				<div class="topPage"> <a href="#wb-tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 					Top of Page</a> </div>
 				<h2><strong>ARTICLE&nbsp;5</strong></h2>
 				<h3><strong>COMPLIANCE </strong></h3>
