--- a/conduite-conduct-fra.html
+++ b/conduite-conduct-fra.html
@@ -170,7 +170,7 @@
 					s&egrave;che d&rsquo;Esquimalt et est publi&eacute; sur le site Web <em>www.tpsgc-pwgsc.gc.ca/pac/cse-egd</em>.</p>
 				<p><strong>1.8&nbsp;R&eacute;vision du Code.</strong> Le Code est revu et modifi&eacute; au
 					besoin.</p>
-				<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
+				<div class="topPage"> <a href="#wb-tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 						Haut de la page</a> </div>
 				<h2><strong> ARTICLE&nbsp;2</strong></h2>
 				<h3><strong>VALEURS &Eacute;THIQUES</strong></h3>
@@ -192,7 +192,7 @@
             la cale s&egrave;che d&rsquo;Esquimalt, les clients, les fournisseurs, les
             coll&egrave;gues et les citoyens du Canada. </li>
         </ol>
-				<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
+				<div class="topPage"> <a href="#wb-tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 					Haut de la page</a> </div>
 				<h2><strong>ARTICLE&nbsp;3</strong></h2>
 				<h3><strong>BESOINS OP&Eacute;RATIONNELS </strong></h3>
@@ -228,7 +228,7 @@
             l&rsquo;entremise d&rsquo;affaires &eacute;quitables et de normes &eacute;lev&eacute;es
             d&rsquo;int&eacute;grit&eacute; op&eacute;rationnelle.</li>
         </ol>
-				<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
+				<div class="topPage"> <a href="#wb-tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 					Haut de la page</a> </div>
 				<h2><strong>ARTICLE&nbsp;4</strong></h2>
 				<h3><strong>NORMES COMPORTEMENTALES</strong></h3>
@@ -292,7 +292,7 @@
             cale s&egrave;che d&rsquo;Esquimalt re&ccedil;oivent un exemplaire du pr&eacute;sent
             Code de conduite. </li>
         </ol>
-				<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
+				<div class="topPage"> <a href="#wb-tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 					Haut de la page</a> </div>
 				<h2><strong>ARTICLE&nbsp;5</strong></h2>
 				<h3><strong>CONFORMIT&Eacute; </strong></h3>
