--- a/dimensions-eng.html
+++ b/dimensions-eng.html
@@ -98,7 +98,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 				<p>A cross-section schematic of the drydock showing the total height and width of the drydock. The height of the floor to the coping is 14.93&nbsp;metres; while the width of the dry dock at enterance is 41.15&nbsp;metres.</p>
 				</div>				
 				
-				<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
+				<div class="topPage"> <a href="#wb-tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 						Top of Page</a> </div>
 				</div>
 				<div style="clear:right;">
