--- a/dimensions-fra.html
+++ b/dimensions-fra.html
@@ -132,7 +132,7 @@
 					<div class="smallFont" style="font-weight:bold; width:450px;"><p>Vue transversale illustrant la hauteur et la largeur totales de la cale s&egrave;che. La hauteur de plancher jusqu'au couronnement est de 14,93&nbsp;m; la cale s&egrave;che mesure 41,15&nbsp;m de largeur &agrave; l'entr&eacute;e.</p>
 					</div>					
 					
-					<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
+					<div class="topPage"> <a href="#wb-tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 						Haut de la page</a> </div>
 				</div>
 				<div style="clear:right;">
