--- a/entreprises-firms-fra.html
+++ b/entreprises-firms-fra.html
@@ -132,7 +132,7 @@
         <br style="clear: both" />
 
         <div class="topPage"> 
-          <a href="#tphp" title="Retourner au haut de la page">
+          <a href="#wb-tphp" title="Retourner au haut de la page">
             <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
             Haut de la page
           </a> 
@@ -168,7 +168,7 @@
         <br style="clear: both" />
 
         <div class="topPage"> 
-          <a href="#tphp" title="Retourner au haut de la page">
+          <a href="#wb-tphp" title="Retourner au haut de la page">
             <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
             Haut de la page
           </a> 
@@ -203,7 +203,7 @@
         <br style="clear: both" />
 
         <div class="topPage"> 
-          <a href="#tphp" title="Retourner au haut de la page">
+          <a href="#wb-tphp" title="Retourner au haut de la page">
             <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
             Haut de la page
           </a> 
@@ -240,7 +240,7 @@
         <br style="clear: both" />
 
         <div class="topPage"> 
-          <a href="#tphp" title="Retourner au haut de la page">
+          <a href="#wb-tphp" title="Retourner au haut de la page">
             <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
             Haut de la page
           </a> 
@@ -275,7 +275,7 @@
         <br style="clear: both" />
 
         <div class="topPage"> 
-          <a href="#tphp" title="Retourner au haut de la page">
+          <a href="#wb-tphp" title="Retourner au haut de la page">
             <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
             Haut de la page
           </a> 
