--- a/env/programme-program-fra.html
+++ b/env/programme-program-fra.html
@@ -108,7 +108,7 @@
       </p>
 
       <div class="topPage"> 
-        <a href="#tphp" title="Retourner au haut de la page">
+        <a href="#wb-tphp" title="Retourner au haut de la page">
           <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
           Haut de la page
         </a> 
@@ -138,7 +138,7 @@
       </p>
 
       <div class="topPage"> 
-        <a href="#tphp" title="Retourner au haut de la page">
+        <a href="#wb-tphp" title="Retourner au haut de la page">
           <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
           Haut de la page
         </a> 
@@ -161,7 +161,7 @@
       </p>
 
       <div class="topPage"> 
-        <a href="#tphp" title="Retourner au haut de la page">
+        <a href="#wb-tphp" title="Retourner au haut de la page">
           <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
           Haut de la page
         </a> 
@@ -200,7 +200,7 @@
       </p>
 
       <div class="topPage"> 
-        <a href="#tphp" title="Retourner au haut de la page">
+        <a href="#wb-tphp" title="Retourner au haut de la page">
           <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
           Haut de la page
         </a> 
@@ -216,7 +216,7 @@
       </ul>
 
       <div class="topPage"> 
-        <a href="#tphp" title="Retourner au haut de la page">
+        <a href="#wb-tphp" title="Retourner au haut de la page">
           <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
           Haut de la page
         </a> 
