--- a/his/article-eng.html
+++ b/his/article-eng.html
@@ -14,27 +14,15 @@
 <link rel="schema.dc" href="http://purl.org/dc/elements/1.1/" />
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
-<meta name="dc.title" content="QE Article - EGD - PWGSC" />
-<meta name="dc.subject" scheme="gccore" content="Ships; Wharfs; History; Cruise ships" />
-
-<meta name="dc.language" scheme="ISO639-2/T" content="eng" />
-<meta name="dc.creator" content="Government of Canada, Public Works and Government Services Canada" />
-<meta name="dc.publisher" content="Government of Canada, Public Works and Government Services Canada" />
-<meta name="dc.audience" content=" " />
-<meta name="dc.contributor" content=" " />
-<meta name="dc.coverage" content=" " />
-<meta name="dc.date.created" content="2008-06-13" />
-<meta name="dc.date.modified" content="2011-12-16" />
-<meta name="dc.format" content=" " />
-<meta name="dc.identifier" content=" " />
-<meta name="dc.rights" content="http://www.tpsgc-pwgsc.gc.ca/comm/ai-in-eng.html" />
+<meta name="description" content="History of the Esquimalt Graving Dock" />
+<meta name="dcterms.description" content="History of the Esquimalt Graving Dock" />
+<meta name="dcterms.creator" content="Government of Canada, Public Works and Government Services Canada" />
+<meta name="dcterms.title" content="QE Article - EGD - PWGSC" />
 <meta name="dcterms.issued" scheme="W3CDTF" content="2007-09-20" />
 <meta name="dcterms.modified" scheme="W3CDTF" content="2011-12-16" />
-
-<meta name="description" content="History of the Esquimalt Graving Dock" />
+<meta name="dcterms.subject" scheme="gccore" content="Ships; Wharfs; History; Cruise ships" />
+<meta name="dcterms.language" scheme="ISO639-2/T" content="eng" />
 <meta name="keywords" content="Esquimalt Graving Dock, history" />
-
-<meta name="pwgsc.contact.email" content="questions@pwgsc.gc.ca" />
 <!-- METADATA ENDS | FIN DES METADONNEES -->
 <!-- TEMPLATE SCRIPTS/CSS BEGIN | DEBUT DES SCRIPTS/CSS DU GABARIT -->
 <link href="/clf20/css/base.css" media="screen, print" rel="stylesheet" type="text/css" />
