--- a/index-fra.html
+++ b/index-fra.html
@@ -56,12 +56,10 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-				<h1 id="cont">
-					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					Cale s&egrave;che d'Esquimalt &ndash; Bienvenue
-					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
-				</h1>
-				<div class="main1"><img src="images/dock-cale.jpg" alt="" width="388" height="250" style="width: 388px; height: 250px;" />
+<!-- MainContentStart -->
+<h1 id="wb-cont">Cale s&egrave;che d'Esquimalt &ndash; Bienvenue</h1>
+<div class="span-4">
+				<div class="main1"><img src="images/dock-cale.jpg" alt="" />
 					
 					<p>La Cale s&egrave;che d'Esquimalt (CSE) est la plus importante forme de radoub commerciale de la c&ocirc;te Ouest des Am&eacute;riques. Nous sommes <a href="emp-loc-fra.html">situ&eacute;s</a> dans un port ouvert &agrave; l'ann&eacute;e longue, sur l'&icirc;le de Vancouver, &agrave; proximit&eacute; des voies d'acc&egrave;s
 &agrave; l'Alaska et aux pays riverains du Pacifique. </p>
@@ -97,7 +95,17 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 							des trois chantiers de r&eacute;paration navale multi-usagers au monde &agrave; poss&eacute;der
 							cette homologation.</p>
 				</div>
-			</div></div>
+      </div>
+<!-- EndEditableContent -->
+<!--#include virtual="/pac/cse-egd/includes/nav_droite-nav_right-fra.html" -->
+
+<dl id="gcwu-date-mod" role="contentinfo">
+<dt>Date de modification&#160;:</dt><dd><span><time><!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'--></time></span></dd>
+</dl>
+
+<div class="clear"></div>
+<!-- MainContentEnd -->
+</div></div>
 
 <div id="wb-sec"><div id="wb-sec-in">
 <!--#include virtual="/pac/cse-egd/includes/nav_gauche-nav_left-fra.html" -->
