--- a/env/politique-policy-fra.html
+++ b/env/politique-policy-fra.html
@@ -1,95 +1,63 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="fr" xml:lang="fr">
+<!DOCTYPE html>
+<!--[if IE 7]><html lang="fr" class="no-js ie7"><![endif]-->
+<!--[if IE 8]><html lang="fr" class="no-js ie8"><![endif]-->
+<!--[if gt IE 8]><!-->
+<html lang="fr" class="no-js">
+<!--<![endif]-->
 <head>
-<!-- VERSION 1.04 DU GABARIT NSI 2.0 | CLF 2.0 TEMPLATE VERSION 1.04 -->
-<!-- VERSION 1.0 DU GABARIT TPSGC | PWGSC TEMPLATE VERSION 1.0 -->
-<!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
-<!-- DEBUT DU TITRE | TITLE BEGINS -->
-
-<title>Politique environnementale &ndash; CSE &ndash; TPSGC</title>
-
-<!-- FIN DU TITRE | TITLE ENDS -->
-<!-- DEBUT DES METADONNEES | METADATA BEGINS -->
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<link rel="schema.dc" href="http://purl.org/dc/elements/1.1/" />
-<link rel="schema.dc" href="http://purl.org/dc/terms/" />
-
-<meta name="dc.title" content="Politique environnementale - CSE - TPSGC" />
-<meta name="dc.subject" scheme="gccore" content="Navire; Quai; Politique environnementale; Déclaration" />
-
-<meta name="dc.language" scheme="ISO639-2/T" content="fra" />
-<meta name="dc.creator" content="Gouvernement du Canada, Travaux publics et Services gouvernementaux Canada" />
-<meta name="dc.publisher" content="Gouvernement du Canada, Travaux publics et Services gouvernementaux Canada" />
-<meta name="dc.audience" content=" " />
-<meta name="dc.contributor" content=" " />
-<meta name="dc.coverage" content=" " />
-<meta name="dc.date.created" content="2008-06-13" />
-<meta name="dc.date.modified" content="2011-12-16" />
-<meta name="dc.format" content=" " />
-<meta name="dc.identifier" content=" " />
-<meta name="dc.rights" content="http://www.tpsgc-pwgsc.gc.ca/comm/ai-in-fra.html" />
+<meta charset="utf-8" />
+<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
+wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
+<!-- WET 3.0, PWGSC 1.0 file: 2col-fra.html -->
+<!-- TitleStart -->
+<title>Page de contenu + menu secondaire 1 - Thème de la facilité d'emploi Web GC - Exemples pratiques - Boîte à outils de l'expérience Web (BOEW)</title>
+<!-- TitleEnd -->
+<!-- MetadataStart -->
+<meta name="description" content="La Cale s&egrave;che d'Esquimalt veut etre le meilleur chantier naval de la cote ouest d'Amerique du Nord. Conscients que l'atteinte de cet objectif passe obligatoirement par la protection de l'environnement, nous nous sommes engages a tout mettre en oeuvre pour que nos activites n'aient pas d'impacts negatifs sur l'environnement et sur la sante et la securite du personnel et de la communaute riveraine." />
+<meta name="dcterms.description" content="La Cale s&egrave;che d'Esquimalt veut etre le meilleur chantier naval de la cote ouest d'Amerique du Nord. Conscients que l'atteinte de cet objectif passe obligatoirement par la protection de l'environnement, nous nous sommes engages a tout mettre en oeuvre pour que nos activites n'aient pas d'impacts negatifs sur l'environnement et sur la sante et la securite du personnel et de la communaute riveraine." />
+<meta name="dcterms.creator" content="Gouvernement du Canada, Travaux publics et Services gouvernementaux Canada" />
+<meta name="dcterms.title" content="Politique environnementale - CSE - TPSGC" />
 <meta name="dcterms.issued" scheme="W3CDTF" content="2007-09-20" />
 <meta name="dcterms.modified" scheme="W3CDTF" content="2011-12-16" />
-
-<meta name="description" content="La Cale s&egrave;che d'Esquimalt veut etre le meilleur chantier naval de la cote ouest d'Amerique du Nord. Conscients que l'atteinte de cet objectif passe obligatoirement par la protection de l'environnement, nous nous sommes engages a tout mettre en oeuvre pour que nos activites n'aient pas d'impacts negatifs sur l'environnement et sur la sante et la securite du personnel et de la communaute riveraine." />
+<meta name="dcterms.subject" scheme="gccore" content="Navire; Quai; Politique environnementale; Déclaration" />
+<meta name="dcterms.language" scheme="ISO639-2/T" content="fra" />
 <meta name="keywords" content="cale seche d'Esquimalt, ISO 14001, environnement, gestion, programmes, sant&eacute;, s&eacute;curit&eacute;" />
+<!-- MetadataEnd -->
+<!--#include virtual="/boew-wet/wet3.0/html5/includes/tete-head.html" -->
 
-<meta name="pwgsc.contact.email" content="questions@tpsgc.gc.ca" />
-<!-- FIN DES METADONNEES | METADATA ENDS -->
-<!-- DEBUT DES CSS DU GABARIT TPSGC | PWGSC TEMPLATE CSS BEGIN -->
-<link href="/clf20/css/base.css" media="screen, print" rel="stylesheet" type="text/css" />
-<link href="/clf20/css/2col.css" media="screen, print" rel="stylesheet" type="text/css" />
-<style type="text/css" media="all">
-@import url(/clf20/css/base2.css);
-</style>
-<!-- PROGRESSIVE ENHANCEMENT BEGINS | DEBUT DE L'AMELIORATION PROGRESSIVE -->
-<script src="/clf20/scripts/pe-ap.js" type="text/javascript"></script>
-<script type="text/javascript">
-	/* <![CDATA[ */
-		var params = {
-			lng:"fra",
-			pngfix:"/clf20/images/inv.gif"
-		};
-		PE.progress(params);
-	/* ]]> */
-	</script>
-<!-- PROGRESSIVE ENHANCEMENT ENDS | FIN DE L'AMELIORATION PROGRESSIVE -->
-<link href="/clf20/css/base-institution.css" media="screen, print" rel="stylesheet" type="text/css" />
-<link href="/clf20/css/institution.css" media="screen, print" rel="stylesheet" type="text/css" />
-<link href="/pac/cse-egd/css/custom.css" media="screen" rel="stylesheet" type="text/css" />
-<link href="/clf20/css/pf-if.css" rel="stylesheet" type="text/css" />
-<!-- FIN DES CSS DU GABARIT TPSGC | PWGSC TEMPLATE CSS END -->
+<!-- CustomScriptsCSSStart -->
+<!-- CustomScriptsCSSEnd -->
 </head>
-<body>
-<div class="page">
-	<div class="core">
-		<!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
-		<!--#include virtual="/clf20/ssi/tete-header-fra.html"-->
-		<!-- HEADER ENDS | FIN DE L'EN-TETE -->
-		<!-- DEBUT DE LA PISTE DE NAVIGATION | BREAD CRUMB BEGINS -->
-		<p class="breadcrumb">
-			<!--#include virtual="/clf20/ssi/bread-pain-fra.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-fra.html"-->
-			&gt;&nbsp;<a href="programme-program-fra.html">Programme
-			environnemental</a> &gt; Politique environnementale</p>
-		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
-		<div class="colLayout">
-			<!-- DEBUT DE LA MISE EN PAGE DE DEUX COLONNES | TWO COLUMN LAYOUT BEGINS -->
-			<!-- DEBUT DU MENU LATERAL GAUCHE | LEFT SIDE MENU BEGINS -->
-			<div class="left">
-				<!--#include virtual="/clf20/ssi/left-menu-gauche1-fra.html"-->
-				<!--#include virtual="/pac/cse-egd/ssi/menu-mi-fra.html"-->
-				<!--#include virtual="/clf20/ssi/left-menu-gauche-proactive-fra.html"-->
-			</div>
-			<!-- FIN DU MENU LATERAL GAUCHE | LEFT SIDE MENU ENDS -->
-			<!-- DEBUT DU CONTENU | CONTENT BEGINS -->
 
-			<div class="center">
+<body><div id="wb-body-sec">
+<div id="wb-skip">
+<ul id="wb-tphp">
+<li id="wb-skip1"><a href="#wb-cont">Passer au contenu principal</a></li>
+<li id="wb-skip2"><a href="#wb-nav">Passer au menu secondaire</a></li>
+</ul>
+</div>
 
-				<h1 id="cont">
-					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					Politique environnementale
-					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
-				</h1>
+<div id="wb-head"><div id="wb-head-in"><header>
+<!-- HeaderStart -->
+
+<!--#include virtual="/boew-wet/wet3.0/html5/includes/banner_gc-gc_banner-fra.html" -->
+<!--#include virtual="/site/wet3.0/html5/includes/banner_site-site_banner-fra.html" -->
+<nav role="navigation">
+<!--#include virtual="/site/wet3.0/html5/includes/nav_mega-mega_nav-fra.html" -->
+<div id="gcwu-bc"><h2>Fil d'Ariane</h2><div id="gcwu-bc-in">
+<ol>
+<!--#include virtual="/site/wet3.0/html5/includes/pain-bread-fra.html" -->
+<!--#include virtual="/pac/cse-egd/includes/pain-bread-section-fra.html" -->
+</ol>
+</div></div>
+</nav>
+<!-- HeaderEnd -->
+</header></div></div>
+
+<div id="wb-core"><div id="wb-core-in" class="equalize">
+<div id="wb-main" role="main"><div id="wb-main-in">
+<!-- MainContentStart -->
+<h1 id="wb-cont">Notices</h1>
         <p>La cale s&egrave;che d'Esquimalt, en partenariat avec l'industrie de r&eacute;paration
           de navires, veut &ecirc;tre le meilleur chantier naval de la
           c&ocirc;te Ouest de l'Am&eacute;rique du Nord.</p>
@@ -124,25 +92,29 @@
 				</ul>
 				<img src="../images/poli-sig-fra.jpg" alt="" width="494" height="138" />
 			</div>
+<!-- EndEditableContent -->
+<dl id="gcwu-date-mod" role="contentinfo">
+<dt>Date de modification&#160;:</dt><dd><span><time><!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'--></time></span></dd>
+</dl>
+<div class="clear"></div>
+<!-- MainContentEnd -->
+</div></div>
 
-			<!-- FIN DU CONTENU | CONTENT ENDS -->
-			<!-- FIN DE LA MISE EN PAGE DE DEUX COLONNES | TWO COLUMN LAYOUT ENDS -->
-			<!-- DEBUT DU PIED DE LA PAGE | FOOTER BEGINS -->
-			<div class="footer">
-				<div class="footerline"></div>
-				<div class="foot1">
-					<!-- DEBUT DE LA DATE DE MODIFICATION | DATE MODIFIED BEGINS -->
-					Date de modification&nbsp;: <span class="date">
-					<!--#config timefmt="%Y-%m-%d"-->
-					<!--#echo var="LAST_MODIFIED"-->
-					</span>
-					<!-- FIN DE LA DATE DE MODIFICATION | DATE MODIFIED ENDS -->
-				</div>
-				<!--#include virtual="/clf20/ssi/foot-pied-fra.html"-->
-			</div>
-			<!-- FIN DU PIED DE LA PAGE | FOOTER ENDS -->
-		</div>
-	</div>
-</div>
+<div id="wb-sec"><div id="wb-sec-in">
+<!--#include virtual="/pac/cse-egd/includes/nav_gauche-nav_left-fra.html" -->
+</div></div>
+</div></div>
+
+<div id="wb-foot"><div id="wb-foot-in"><footer><h2>Pied de page</h2>
+<!-- FooterStart -->
+<!--#include virtual="/site/wet3.0/html5/includes/pied_site-site_footer-fra.html" -->
+<!--#include virtual="/boew-wet/wet3.0/html5/includes/pied_gc-gc_footer-fra.html" -->
+<!-- FooterEnd -->
+</footer>
+</div></div></div>
+
+<!-- ScriptsStart -->
+<!--#include virtual="/boew-wet/wet3.0/html5/includes/script_pied-script_footer.html" -->
+<!-- ScriptsEnd -->
 </body>
 </html>
