--- a/env/projects-projets-eng.html
+++ b/env/projects-projets-eng.html
@@ -1,98 +1,62 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<!DOCTYPE html>
+<!--[if IE 7]><html lang="en" class="no-js ie7"><![endif]-->
+<!--[if IE 8]><html lang="en" class="no-js ie8"><![endif]-->
+<!--[if gt IE 8]><!-->
+<html lang="en" class="no-js">
+<!--<![endif]-->
 <head>
-<!-- CLF 2.0 TEMPLATE VERSION 1.04 | VERSION 1.04 DU GABARIT NSI 2.0 -->
-<!-- PWGSC TEMPLATE VERSION 1.0 | VERSION 1.0 DU GABARIT TPSGC -->
-<!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
-<!-- TITLE BEGINS | DEBUT DU TITRE -->
-
-<title>EGD: Capital Projects</title>
-<!-- TITLE ENDS | FIN DU TITRE -->
-<!-- METADATA BEGINS | DEBUT DES METADONNEES -->
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<link rel="schema.dc" href="http://purl.org/dc/elements/1.1/" />
-<link rel="schema.dc" href="http://purl.org/dc/terms/" />
-
-<meta name="dc.title" content="Leading the Way with ISO 14001 - EGD - PWGSC" />
-<meta name="dc.subject" scheme="gccore" content="Ships; Wharfs; Environment; Information;  Indexes" />
-
-<meta name="dc.language" scheme="ISO639-2/T" content="eng" />
-<meta name="dc.creator" content="Government of Canada, Public Works and Government Services Canada" />
-<meta name="dc.publisher" content="Government of Canada, Public Works and Government Services Canada" />
-<meta name="dc.audience" content=" " />
-<meta name="dc.contributor" content=" " />
-<meta name="dc.coverage" content=" " />
-<meta name="dc.date.created" content="2008-06-13" />
-<meta name="dc.date.modified" content="2011-12-16" />
-<meta name="dc.format" content=" " />
-<meta name="dc.identifier" content=" " />
-<meta name="dc.rights" content="http://www.tpsgc-pwgsc.gc.ca/comm/ai-in-eng.html" />
+<meta charset="utf-8" />
+<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
+wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
+<!-- WET 3.0, PWGSC 1.0 file: 2col-eng.html -->
+<!-- TitleStart -->
+<title>Notices - EGD - PWGSC</title>
+<!-- TitleEnd -->
+<!-- MetadataStart --><meta name="description" content="EGD Leading the Way with ISO 14001" />
+<meta name="dcterms.description" content="EGD Leading the Way with ISO 14001" />
+<meta name="dcterms.creator" content="Government of Canada, Public Works and Government Services Canada" />
+<meta name="dcterms.title" content="Leading the Way with ISO 14001 - EGD - PWGSC" />
 <meta name="dcterms.issued" scheme="W3CDTF" content="2007-09-20" />
 <meta name="dcterms.modified" scheme="W3CDTF" content="2011-12-16" />
-
-<meta name="description" content="EGD Leading the Way with ISO 14001" />
+<meta name="dcterms.subject" scheme="gccore" content="Ships; Wharfs; Environment; Information;  Indexes" />
+<meta name="dcterms.language" scheme="ISO639-2/T" content="eng" />
 <meta name="keywords" content="Esquimalt Graving Dock, ISO 14001, environment, management, programs, health;, safety" />
+<!-- MetadataEnd -->
+<!--#include virtual="/boew-wet/wet3.0/html5/includes/tete-head.html" -->
 
-<meta name="pwgsc.contact.email" content="questions@pwgsc.gc.ca" />
-<!-- METADATA ENDS | FIN DES METADONNEES -->
-<!-- TEMPLATE SCRIPTS/CSS BEGIN | DEBUT DES SCRIPTS/CSS DU GABARIT -->
-<link href="/clf20/css/base.css" media="screen, print" rel="stylesheet" type="text/css" />
-<link href="/clf20/css/2col.css" media="screen, print" rel="stylesheet" type="text/css" />
-<style type="text/css" media="all">
-@import url(/clf20/css/base2.css);
-</style>
-<!-- TEMPLATE SCRIPTS/CSS END | FIN DES SCRIPTS/CSS DU GABARIT -->
-<!-- PROGRESSIVE ENHANCEMENT BEGINS | DEBUT DE L'AMELIORATION PROGRESSIVE -->
-<script src="/clf20/scripts/pe-ap.js" type="text/javascript"></script>
-<script type="text/javascript">
-	/* <![CDATA[ */
-		var params = {
-			lng:"eng",
-			pngfix:"/clf20/images/inv.gif"
-		};
-		PE.progress(params);
-	/* ]]> */
-	</script>
-<!-- PROGRESSIVE ENHANCEMENT ENDS | FIN DE L'AMELIORATION PROGRESSIVE -->
-<!-- CUSTOM SCRIPTS/CSS BEGIN | DEBUT DES SCRIPTS/CSS PERSONNALISES -->
-<link href="/clf20/css/base-institution.css" media="screen, print" rel="stylesheet" type="text/css" />
-<link href="/clf20/css/institution.css" media="screen, print" rel="stylesheet" type="text/css" />
-<link href="/pac/cse-egd/css/custom.css" media="screen" rel="stylesheet" type="text/css" />
-<!-- CUSTOM SCRIPTS/CSS END | FIN DES SCRIPTS/CSS PERSONNALISES -->
-<!-- TEMPLATE PRINT CSS BEGINS | DEBUT DU CSS DU GABARIT POUR L'IMPRESSION -->
-<link href="/clf20/css/pf-if.css" rel="stylesheet" type="text/css" />
-<!-- TEMPLATE PRINT CSS ENDS | FIN DU CSS DU GABARIT POUR L'IMPRESSION -->
+<!-- CustomScriptsCSSStart -->
+<!-- CustomScriptsCSSEnd -->
 </head>
-<body>
-<div class="page">
-	<div class="core">
-		<!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
-		<!--#include virtual="/clf20/ssi/tete-header-eng.html"-->
-		<!-- HEADER ENDS | FIN DE L'EN-TETE -->
-		<!-- BREAD CRUMB BEGINS | DEBUT DE LA PISTE DE NAVIGATION -->
-		<p class="breadcrumb">
-			<!--#include virtual="/clf20/ssi/bread-pain-eng.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-eng.html"-->
-					&gt; <abbr title="Esquimalt Graving Dock">EGD</abbr>: Capital Projects</p>
-		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
-		<div class="colLayout">
-			<!-- TWO COLUMN LAYOUT BEGINS | DEBUT DE LA MISE EN PAGE DE DEUX COLONNES -->
-			<!-- LEFT SIDE MENU BEGINS | DEBUT DU MENU LATERAL GAUCHE -->
-			<div class="left">
-				<!--#include virtual="/clf20/ssi/left-menu-gauche1-eng.html"-->
-				<!--#include virtual="/pac/cse-egd/ssi/menu-mi-eng.html"-->
-				<!--#include virtual="/clf20/ssi/left-menu-gauche-proactive-eng.html"-->
-			</div>
-			<!-- LEFT SIDE MENU ENDS | FIN DU MENU LATERAL GAUCHE -->
-			<!-- CONTENT BEGINS | DEBUT DU CONTENU -->
 
-			<div class="center">
+<body><div id="wb-body-sec">
+<div id="wb-skip">
+<ul id="wb-tphp">
+<li id="wb-skip1"><a href="#wb-cont">Skip to main content</a></li>
+<li id="wb-skip2"><a href="#wb-nav">Skip to secondary menu</a></li>
+</ul>
+</div>
 
-				<h1 id="cont">
-					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					<abbr title="Esquimalt Graving Dock">EGD</abbr>: Capital Projects 
-					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
-				</h1>
+<div id="wb-head"><div id="wb-head-in"><header>
+<!-- HeaderStart -->
+<!--#include virtual="/boew-wet/wet3.0/html5/includes/banner_gc-gc_banner-eng.html" -->
+<!--#include virtual="/site/wet3.0/html5/includes/banner_site-site_banner-eng.html" -->
+<nav role="navigation">
+<!--#include virtual="/site/wet3.0/html5/includes/nav_mega-mega_nav-eng.html" -->
 
+<div id="gcwu-bc"><h2>Breadcrumb trail</h2><div id="gcwu-bc-in">
+<ol>
+<!--#include virtual="/site/wet3.0/html5/includes/pain-bread-eng.html" -->
+<!--#include virtual="/pac/cse-egd/includes/pain-bread-section-eng.html" -->
+<li>Notices</li>
+</ol>
+</div></div>
+</nav>
+<!-- HeaderEnd -->
+</header></div></div>
+
+<div id="wb-core"><div id="wb-core-in" class="equalize">
+<div id="wb-main" role="main"><div id="wb-main-in">
+<h1>Notices</h1>
         <p>
           The Esquimalt Graving Dock (EGD) has a number of exciting changes both in the planning and the developmental stages.  The primary project will be the installation of a new 30&nbsp;tonne double boom level luffing crane that will be erected on the south side of the basin dock.  Preporation for the erection of the new crane is scheduled to commence in April,&nbsp;2010. The approximate date that the new 30&nbsp;tonne crane will be in service is the end of July,&nbsp;2010.  Following the erection and commissioning of the new crane on the south side of the basin dock work will then commence immediately on dismantling our existing 30&nbsp;tonne crane for refurbishment and modernization of its motors and drives.  The existing 30&nbsp;tonne crane will be disassembled piece by piece and placed in dock bottom in Section&nbsp;#&nbsp;3. There it will be inspected completely and repaired, where required, then reassembled on the north side of the basin dock on the tracks of our current 44&nbsp;tonne hammerhead crane.  This work is scheduled to begin immediately following the commissioning of the new crane approximatley the end of July,&nbsp;2010.  The contractor for this project will utilize space in dock bottom in Section&nbsp;#&nbsp;3 as well as the areas adjacent to Section&nbsp;#&nbsp;3 top side for their work area on this crane.  The refurbishment and modernization of the <abbr title="Esquimalt Graving Dock">EGD</abbr>'s current 30&nbsp;tonne crane will run from July,&nbsp;2010 through to approximately November,&nbsp;2010.  Once our existing 30&nbsp;tonne crane is assembled and is back in service on the north side of the basin dock work will then commence on the removal of our 44&nbsp;tonne hammerhead crane from the north side of the basin dock.  
         </p>
@@ -104,27 +68,23 @@
         <p>
         If anyone has any questions on any of the above or would like further information please do not hesitate to contact <a href="mailto:david.latoski@pwgsc-tpsgc.gc.ca">David Latoski</a>, Operations Manager, Esquimalt Graving Dock at 250-363-8056.  
         </p>
-			</div>
+</div></div>
+<div id="wb-sec"><div id="wb-sec-in">
+<!--#include virtual="/pac/cse-egd/includes/nav_gauche-nav_left-eng.html" -->
+</div></div>
+</div></div>
 
-			<!-- CONTENT ENDS | FIN DU CONTENU -->
-			<!-- TWO COLUMN LAYOUT ENDS | FIN DE LA MISE EN PAGE DE DEUX COLONNES -->
-			<!-- FOOTER BEGINS | DEBUT DU PIED DE LA PAGE -->
-			<div class="footer">
-				<div class="footerline"></div>
-				<div class="foot1">
-					<!-- DATE MODIFIED BEGINS | DEBUT DE LA DATE DE MODIFICATION -->
-					Date Modified: <span class="date">
-					<!--#config timefmt="%Y-%m-%d"-->
-					<!--#echo var="LAST_MODIFIED"-->
-					</span>
-					<!-- DATE MODIFIED ENDS | FIN DE LA DATE DE MODIFICATION -->
-				</div>
-				<!--#include virtual="/clf20/ssi/foot-pied-eng.html"-->
-			</div>
-			<!-- FOOTER ENDS | FIN DU PIED DE LA PAGE -->
-		</div>
-	</div>
-</div>
+<div id="wb-foot"><div id="wb-foot-in"><footer><h2>Footer</h2>
+<!-- FooterStart -->
+<!--#include virtual="/site/wet3.0/html5/includes/pied_site-site_footer-eng.html" -->
+<!--#include virtual="/boew-wet/wet3.0/html5/includes/pied_gc-gc_footer-eng.html" -->
+<!-- FooterEnd -->
+</footer>
+</div></div></div>
+
+<!-- ScriptsStart -->
+<!--#include virtual="/boew-wet/wet3.0/html5/includes/script_pied-script_footer.html" -->
+<!-- ScriptsEnd -->
 </body>
 </html>
 
